# EvolutionNet

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: EvolutionNetGithubCI.yml
examples/: CMakeLists.txt  xor_advanced.cpp  xor_minimal.cpp
include/EvolutionNet/: ConnectionGene.hpp  EvolutionNet.hpp  FlatMap.hpp  FlatSet.hpp  Genome.hpp  Network.hpp  Population.hpp  Random.hpp  Types.hpp
tests/: CMakeLists.txt  RndNumberGenerator.hpp  TestFlatMap.cpp  TestFlatSet.cpp
